--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -94,9 +94,12 @@ ul {
     width: 100%;
     display: block;
     align-items: flex-start;
-    justify-content: space-around;
-    cursor: pointer;
+    justify-content: space-between;
     position: relative;
+}
+
+#listaTarefas a {
+    cursor: pointer;
 }
 
 #listaTarefas li {
